--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- PAGE TITLE (CAN BE CUSTOMIZED BY CHILD PAGES) -->
-    {% set default_title = "My App | Made with the Flask Sheets Template 2024" -%}
+    {% set default_title = "Rish | Made with the Flask Sheets Template 2024" -%}
     {% set page_title = page_title|default(default_title) -%}
     <title>{{page_title}}</title>
 
@@ -100,7 +100,7 @@
         https://getbootstrap.com/docs/5.1/customize/color/#theme-colors
     -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <!--
