--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -6,8 +6,8 @@
 
     <h1>About</h1>
 
-    <p class="lead">This is the about page</p>
+    <p class="lead">Welcome to RK's Online Fresh fruit Store</p>
 
-    <p>Here is some more info!</p>
+    <p>Just select what you like and will deliver it to you!</p>
 
 {% endblock %}
