--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -107,12 +107,12 @@
                     NAV ICON
                     https://icons.getbootstrap.com/
                 -->
-                <i class="bi-globe" style="font-size: 1.7rem; color: white;"></i>
+                <i class="bi-globe" style="font-size: 1.7rem; color: rgb(109, 29, 214);"></i>
                 &nbsp;
                 <!--
                     NAV TITLE
                 -->
-                My App
+                Fresh Fruits
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
