--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -5,8 +5,8 @@
 
     <h1>Home</h1>
 
-    <p class="lead">This is the home page.</p>
+    <p class="lead">Get all best Audio VSTs at one place.</p>
 
-    <p>Here is some more info!</p>
+    <p> RK'Daw is a platform where you can check out and order latest online Audio VST Plugins at ease!</p>
 
 {% endblock %}
